samples/blue-green/diamond/tdp/nginx.service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: $TARGET_ROLE
  labels:
    app: nginx
    role: $TARGET_ROLE
    env: prod
spec:
  type: LoadBalancer
  selector:
    app: nginx
    role: $TARGET_ROLE
  ports:
    - port: 80
      targetPort: 80
