samples/blue-green/diamond/tdp/production.nginx.service.blue.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-blue
  namespace: production
spec:
  type: ExternalName
  externalName: nginx-blue.blue.svc.cluster.local
  ports:
  - port: 80
