samples/blue-green/diamond/tdp/production.ingress.green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: production    
spec:
  rules:
    - host: production.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-green
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: nginx-green
                port:
                  number: 80
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: nginx-blue
                port:
                  number: 80
    - host: test.green.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-green
                port:
                  number: 80
    - host: test.blue.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-blue
                port:
                  number: 80
